Add Inputs, TextArea and Select

--- a/index.html
+++ b/index.html
@@ -27,8 +27,28 @@
                 <legend>Informações do Evento</legend>
 
                 <div class="input-wrapper">
-                    <label for="event-title">Título do Evento <span>(mínimo 8 caracteres)</span></label>
+                    <label for="event-title">Título do Evento<span>(mínimo 8 caracteres)</span></label>
                     <input type="text" id="event-title" />
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="event-link">Link do Evento<span>(comece com https://)</span></label>
+                    <input type="text" id="event-link" />
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="whatsapp">Whatsapp para Contato<span>(somente números)</span></label>
+                    <input type="text" id="whatsapp" />
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="infos-extras">Informações Extras</label>
+                    <textarea id="infos-extras" ></textarea>
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="categoria">Categoria</label>
+                    <select type="text" id="categoria" >
                 </div>
             </fieldset>    
 
